# xanesnet

./: .gitignore  .gitmodules  .readthedocs.yml  AE.py  AEGAN.py  README.md  ae_learn.py  ae_predict.py  aegan_learn.py  aegan_predict.py  cli.py  cli_ae.py  cli_aegan.py  cli_eval.py  cli_test.py  cnn_pytorch.py  core_eval.py  core_learn.py  core_predict.py  core_test.py  dnn.py  flake.nix  gan-autoencoder-dev.py  in.json  in_aegan.json  in_aegan_kfold.json  in_cnn.json  in_predict.json  in_test.json  inout.py  learn.py  mlp_pytorch.py  model.py  model_utils.py  networks.py  plot.py  pyproject.toml  requirements.txt  run_test.sh  setup.py  (+1 more)
inputs/: README.md  in.json  in_ae_cnn.yaml  in_ae_mlp.yaml  in_aegan.json  in_aegan.yaml  in_aegan_kfold.json  in_aegan_mlp.yaml  in_cnn.json  in_cnn.yaml  in_data_aug1.json  in_data_aug2.json  in_eval.json  in_eval.yaml  in_gnn.yaml  in_kfold.json  in_lmbtr.yaml  in_lstm.yaml  in_mbtr.yaml  in_mh_cnn.yaml  in_mlp.yaml  in_pdos.yaml  in_predict.json  in_predict.yaml  in_soap.yaml  in_xtb.yaml
resources/: banner_close.txt  banner_open.txt
spectrum/: xanes.py
sphinx/: conf.py  contributing.rst  example_descriptor.rst  input_file_predict.rst  input_file_training.rst  model_cnn.rst  model_mlp.rst  models.rst  running.rst
src/: .gitignore  ae_learn.py  aegan_learn.py  aegan_predict.py  bootstrap_fn.py  cli.py  cnn_pytorch.py  core_data.py  core_eval.py  core_learn.py  core_predict.py  creator.py  data_augmentation.py  data_descriptor.py  data_transform.py  dnn.py  ensemble_fn.py  freeze_fn.py  inout.py  kfold_fn.py  learn.py  mlp_pytorch.py  model.py  model_utils.py  montecarlo_fn.py  (+5 more)
(+46285 files in other folders)
