[project]
name = "xanesnet"
version = "0.1.0"
requires-python = "==3.10.18" # Nixpkgs provides only v3.10.18.
description = "Theoretical simulation of X-ray spectroscopy (XS)"
license = "GPL-3.0-only"
dependencies = [
    "ase==3.22.1",
    "dscribe==1.2.2",
    "mace-torch==0.3.6",
    "matplotlib==3.6.3",
    "mlflow==2.1.1",
    "numpy==1.22",
    "optuna==3.1.1",
    "pyemd==0.5.1",
    "pyscf==2.4.0",
    "pytest==8.3.3",
    "pyyaml==6.0",
    "scikit_learn==1.2.0",
    "seaborn==0.11.2",
    "shap==0.44.0",
    "sphinx_rtd_theme==1.3.0",
    "sphinx==7.2.5",
    "tblite==0.4.0",
    'tensorflow==2.9.2; sys_platform!="darwin"',
    'tensorflow-macos==2.9; sys_platform=="darwin"',
    "torch_geometric==2.5.3",
    "torch==2.1.2",
    "torchinfo==1.7.1",
    "tqdm==4.62.3",
]

[[project.authors]]
name = "Professor Thomas Penfold"
email = "tom.penfold@ncl.ac.uk"

[project.scripts]
xanesnet = "xanesnet.cli:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
module-name = [
    "xanesnet",
    "xanesnet.datasets",
    "xanesnet.descriptors",
    "xanesnet.models",
    "xanesnet.scheme",
    "xanesnet.utils",
]

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "all"
reportAny = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "T20", "ERA", "PLR2004", "TD", "FIX"]
